--- a/llama.ipynb
+++ b/llama.ipynb
@@ -44,7 +44,7 @@
     "class Tokenizer:\n",
     "    def __init__(self, model_path):\n",
     "        assert os.path.isfile(model_path), model_path\n",
-    "        self.sp_model = spm.SentencePieceProcessor(model_file=model_file)\n",
+    "        self.sp_model = spm.SentencePieceProcessor(model_file=model_path)\n",
     "        # BOS / EOS token IDs\n",
     "        self.vocab_size: int = self.sp_model.vocab_size()\n",
     "        self.bos_id: int = self.sp_model.bos_id()\n",
@@ -64,7 +64,10 @@
     "        return self.sp_model.decode(ids)\n",
     "\n",
     "tokenizer = Tokenizer(\"tokenizer.model\")\n",
-    "tokenizer.encode(\"hello world\", bos=True, eos=True)"
+    "data = dataset['train'][0]['text']\n",
+    "encoded_text = tokenizer.encode(data, bos=True, eos=True)\n",
+    "decoded_text = tokenizer.decode(encoded_text)\n",
+    "assert data == decoded_text"
    ]
   },
   {
