--- a/llama.ipynb
+++ b/llama.ipynb
@@ -75,7 +75,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# LLama Architecture (Thanks GPT4)\n",
+    "\n",
+    "# Input\n",
+    "#   |\n",
+    "#   v\n",
+    "# Embeddings\n",
+    "#   |\n",
+    "#   v\n",
+    "# RMS Norm\n",
+    "#   |\n",
+    "#   v\n",
+    "# (Start of Nx transformer blocks)\n",
+    "# Self-Attention (Grouped Multi-Query Attention) with KV Cache\n",
+    "#   |                         |\n",
+    "#   |                         |-----------------,\n",
+    "#   v                         v                 |\n",
+    "# Q (Rotary)              K (Rotary)           V\n",
+    "#   |                         |                 |\n",
+    "#   '----------+--------------'                 |\n",
+    "#              |                                |\n",
+    "#              +---->(Add & Norm)               |\n",
+    "#              |                                |\n",
+    "#              v                                |\n",
+    "#         RMS Norm                              |\n",
+    "#              |                                |\n",
+    "#              v                                |\n",
+    "#   Feed Forward SwiGLU                         |\n",
+    "#              |                                |\n",
+    "#              +---->(Add & Norm)<--------------+\n",
+    "#              |\n",
+    "# (End of Nx transformer blocks)\n",
+    "#              |\n",
+    "#              v\n",
+    "#            Linear\n",
+    "#              |\n",
+    "#              v\n",
+    "#           Softmax\n"
+   ]
   }
  ],
  "metadata": {
