add naive model

--- a/llama.ipynb
+++ b/llama.ipynb
@@ -9,8 +9,28 @@
     "# load dataset\n",
     "from datasets import load_dataset\n",
     "dataset = load_dataset(\"roneneldan/TinyStories\")\n",
+    "\n",
+    "shuffled_train_dataset = dataset[\"train\"].shuffle(seed=42)\n",
+    "shuffled_val_dataset = dataset[\"validation\"].shuffle(seed=42)\n",
+    "\n",
+    "# Sample size for training data\n",
+    "train_sample_size = 50000\n",
+    "\n",
+    "# Calculate proportional size for validation data\n",
+    "val_sample_size = int((len(shuffled_val_dataset) / len(shuffled_train_dataset)) * train_sample_size)\n",
+    "\n",
+    "# Sample the data\n",
+    "sampled_train_dataset = shuffled_train_dataset.select(range(train_sample_size))\n",
+    "sampled_val_dataset = shuffled_val_dataset.select(range(val_sample_size))\n",
+    "\n",
+    "dataset = {\n",
+    "    \"train\": sampled_train_dataset,\n",
+    "    \"validation\": sampled_val_dataset\n",
+    "}\n",
+    "\n",
     "print(dataset['train'][:10])\n",
-    "print(len(dataset['train']))"
+    "print(len(dataset['train']))\n",
+    "model_type = 'naive'"
    ]
   },
   {
@@ -19,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "class TinyDataset(torch.utils.data.Dataset):\n",
+    "from torch.utils.data import Dataset\n",
+    "class TinyDataset(Dataset):\n",
     "    def __init__(self, dataset):\n",
     "        self.dataset = dataset\n",
     "\n",
@@ -64,10 +84,9 @@
     "        return self.sp_model.decode(ids)\n",
     "\n",
     "tokenizer = Tokenizer(\"tokenizer.model\")\n",
-    "data = dataset['train'][0]['text']\n",
-    "encoded_text = tokenizer.encode(data, bos=True, eos=True)\n",
+    "encoded_text = tokenizer.encode(dataset['train'][0]['text'], bos=True, eos=True)\n",
     "decoded_text = tokenizer.decode(encoded_text)\n",
-    "assert data == decoded_text"
+    "assert dataset['train'][0]['text'] == decoded_text"
    ]
   },
   {
@@ -114,6 +133,142 @@
     "#              v\n",
     "#           Softmax\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "# Utilities\n",
+    "def prep_data(dataset, tokenizer, device):\n",
+    "    new_dataset = {}\n",
+    "    # add eos and bos tokens\n",
+    "    for split in dataset.keys():\n",
+    "        new_dataset[split] = []\n",
+    "        for data in dataset[split]:\n",
+    "            data['text'] = f\"{tokenizer.bos_id}{data['text']}{tokenizer.eos_id}\"\n",
+    "            new_dataset[split].append(data)\n",
+    "    \n",
+    "    encoded_ds = {}\n",
+    "    for split in new_dataset.keys():\n",
+    "        combined_corpus = \"\".join([x['text'] for x in new_dataset[split]])\n",
+    "        encoded_ds[split] = torch.tensor(tokenizer.encode(combined_corpus, bos=False, eos=False)).to(device)\n",
+    "    return encoded_ds\n",
+    "\n",
+    "def get_ds(encoded_ds, split, config, device):\n",
+    "    ds = encoded_ds[split]\n",
+    "    ix = torch.randint(0, ds.size(0) - config['context_window'] - 1, (config['batch_size'],))\n",
+    "    x = torch.stack([ds[i:i+config['context_window']] for i in ix]).long().to(device)\n",
+    "    y = torch.stack([ds[i+1:i+config['context_window']+1] for i in ix]).long().to(device)\n",
+    "    return x, y\n",
+    "\n",
+    "@torch.no_grad()  # don't compute gradients for this function\n",
+    "def evaluate_loss(model, config, device, ds):\n",
+    "    out = {}\n",
+    "    model.eval()\n",
+    "    for split in ds.keys():\n",
+    "        losses = []\n",
+    "        for _ in range(10):\n",
+    "            xb, yb = get_ds(ds, split, config, device)\n",
+    "            _, loss = model(xb, yb)\n",
+    "            losses.append(loss.item())\n",
+    "        out[split] = np.mean(losses)\n",
+    "    model.train()\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(\"device: \", device)\n",
+    "class NaiveModel(nn.Module):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        self.config = config\n",
+    "        self.embedding = nn.Embedding(config['vocab_size'], config['d_model'])\n",
+    "        self.linear = nn.Sequential(\n",
+    "            nn.Linear(config['d_model'], config['d_model']),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(config['d_model'], config['vocab_size'])\n",
+    "        )\n",
+    "        print(\"Model params: \", sum([m.numel() for m in self.parameters()]))\n",
+    "    \n",
+    "    def forward(self, idx, targets=None):\n",
+    "        x = self.embedding(idx)\n",
+    "        logits = self.linear(x)\n",
+    "        if targets is not None:\n",
+    "            loss = F.cross_entropy(logits.view(-1, self.config['vocab_size']), targets.view(-1)).to(device)\n",
+    "            return logits, loss\n",
+    "        else:\n",
+    "            return logits\n",
+    "\n",
+    "config = {\n",
+    "    'vocab_size': tokenizer.vocab_size,\n",
+    "    'batch_size': 32,\n",
+    "    'context_window': 64,\n",
+    "    'd_model': 128,\n",
+    "}\n",
+    "if model_type == 'naive':\n",
+    "    model = NaiveModel(config).to(device)\n",
+    "    encoded_ds = prep_data(dataset, tokenizer, device)\n",
+    "    xs, ys = get_ds(encoded_ds, 'train', config, device)\n",
+    "    logits, loss = model(xs, ys)\n",
+    "    print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n",
+    "from torch.optim import Adam\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "config.update({\n",
+    "    'lr': 1e-3,\n",
+    "    'epochs': 1000,\n",
+    "    'log_interval': 10,\n",
+    "})\n",
+    "optimizer = Adam(model.parameters())\n",
+    "def train(model, optimizer, config):\n",
+    "    losses = []\n",
+    "    start_time = time.time()\n",
+    "    for epoch in range(config['epochs']):\n",
+    "        optimizer.zero_grad()\n",
+    "        xs, ys = get_ds(encoded_ds, 'train', config, device)\n",
+    "        logits, loss = model(xs, ys)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "        if epoch % config['log_interval'] == 0:\n",
+    "            batch_time = time.time() - start_time\n",
+    "            evaluated_loss = evaluate_loss(model, config, device, encoded_ds)\n",
+    "            losses += [evaluated_loss]\n",
+    "            print(f\"Epoch {epoch} | val loss {evaluated_loss['validation']:.3f} | Time {batch_time:.3f} | ETA in seconds {batch_time * (config['epochs'] - epoch)/config['log_interval'] :.3f}\")\n",
+    "            start_time = time.time()\n",
+    "    print(\"validation loss: \", losses[-1]['validation'])\n",
+    "    return pd.DataFrame(losses).plot()\n",
+    "\n",
+    "train(model, optimizer, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
