--- a/llama.ipynb
+++ b/llama.ipynb
@@ -231,6 +231,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Llama Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# train\n",
     "from torch.optim import Adam\n",
     "import time\n",
@@ -268,7 +277,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inference\n",
+    "def generate(model, prompt, tokenizer, config, device, max_new_tokens, temperature):\n",
+    "    encoded_prompt = torch.tensor(tokenizer.encode(prompt, bos=True, eos=False)).unsqueeze(0).to(device)\n",
+    "    next_tokens = []\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        x = encoded_prompt[-config['context_window']:].to(device)\n",
+    "        logits = model(x)\n",
+    "        probs = F.softmax(logits[:, -1, :], dim=-1)\n",
+    "        next_token = torch.multinomial(probs / temperature, num_samples=1)\n",
+    "        next_tokens.append(next_token.item())\n",
+    "        encoded_prompt = torch.cat([encoded_prompt, next_token], dim=-1)\n",
+    "    print(tokenizer.decode(next_tokens))\n",
+    "\n",
+    "generate(model, \"Once upon \", tokenizer, config, device, 10, 0.7)"
+   ]
   }
  ],
  "metadata": {
