--- a/llama.ipynb
+++ b/llama.ipynb
@@ -187,6 +187,35 @@
    "outputs": [],
    "source": [
     "from torch import nn\n",
+    "import torch\n",
+    "\n",
+    "# Llama Model modules\n",
+    "\n",
+    "class RMSNorm(nn.Module):\n",
+    "    # RMS = x / sqrt(E[x^2] + eps)\n",
+    "    def __init__(self, dim, eps=1e-6):\n",
+    "        super().__init__()\n",
+    "        self.eps = eps\n",
+    "        self.weight = nn.Parameter(torch.ones(dim))\n",
+    "    \n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        rms_norm = x * torch.rsqrt(x.pow(2).mean(dim=-1, keepdim=True) + self.eps)\n",
+    "        # if not self.training:\n",
+    "        #     print(\"++++++++++++++++++++++++++++++++++++++\")\n",
+    "        #     print(rms_norm.shape)\n",
+    "        #     print(self.weight.shape)\n",
+    "        #     print(\"++++++++++++++++++++++++++++++++++++++\")\n",
+    "        return self.weight * rms_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Naive Model\n",
+    "from torch import nn\n",
     "from torch.nn import functional as F\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"device: \", device)\n",
@@ -195,6 +224,7 @@
     "        super().__init__()\n",
     "        self.config = config\n",
     "        self.embedding = nn.Embedding(config['vocab_size'], config['d_model'])\n",
+    "        self.rms = RMSNorm((config['context_window'], config['d_model']))\n",
     "        self.linear = nn.Sequential(\n",
     "            nn.Linear(config['d_model'], config['d_model']),\n",
     "            nn.ReLU(),\n",
@@ -204,6 +234,7 @@
     "    \n",
     "    def forward(self, idx, targets=None):\n",
     "        x = self.embedding(idx)\n",
+    "        x = self.rms(x)\n",
     "        logits = self.linear(x)\n",
     "        if targets is not None:\n",
     "            loss = F.cross_entropy(logits.view(-1, self.config['vocab_size']), targets.view(-1)).to(device)\n",
@@ -231,7 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Llama Model\n"
+    "# Llama model\n",
+    "n_transformer_blocks = 1\n"
    ]
   },
   {
@@ -280,19 +312,32 @@
    "source": [
     "# Inference\n",
     "def generate(model, prompt, tokenizer, config, device, max_new_tokens, temperature):\n",
-    "    encoded_prompt = torch.tensor(tokenizer.encode(prompt, bos=True, eos=False)).unsqueeze(0).to(device)\n",
+    "    model.eval()\n",
+    "    encoded_prompt = torch.tensor(tokenizer.encode(prompt, bos=True, eos=False)).to(device).unsqueeze(0).to(device)\n",
+    "    # pad tokens\n",
+    "    if encoded_prompt.size(1) < config['context_window']:\n",
+    "        encoded_prompt = F.pad(encoded_prompt, (config['context_window'] - encoded_prompt.size(1), 0), value=tokenizer.pad_id).to(device)\n",
+    "    print(f\"encoded prompt shape: {encoded_prompt.shape}\")\n",
     "    next_tokens = []\n",
     "    for _ in range(max_new_tokens):\n",
-    "        x = encoded_prompt[-config['context_window']:].to(device)\n",
-    "        logits = model(x)\n",
-    "        probs = F.softmax(logits[:, -1, :], dim=-1)\n",
-    "        next_token = torch.multinomial(probs / temperature, num_samples=1)\n",
+    "        # x = encoded_prompt[-config['context_window']:].to(device)\n",
+    "        logits = model(encoded_prompt).to(device)\n",
+    "        probs = F.softmax(logits[:, -1, :], dim=-1).to(device)\n",
+    "        next_token = torch.multinomial(probs / temperature, num_samples=1).to(device)\n",
     "        next_tokens.append(next_token.item())\n",
-    "        encoded_prompt = torch.cat([encoded_prompt, next_token], dim=-1)\n",
+    "        encoded_prompt = torch.cat([encoded_prompt[1:], next_token], dim=0).to(device)\n",
+    "        print(\"encoded prompt: \", encoded_prompt)\n",
     "    print(tokenizer.decode(next_tokens))\n",
     "\n",
     "generate(model, \"Once upon \", tokenizer, config, device, 10, 0.7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
