fix inference. the problem was the padding token is unset in the tokenizer

--- a/llama.ipynb
+++ b/llama.ipynb
@@ -69,8 +69,10 @@
     "        self.vocab_size: int = self.sp_model.vocab_size()\n",
     "        self.bos_id: int = self.sp_model.bos_id()\n",
     "        self.eos_id: int = self.sp_model.eos_id()\n",
-    "        self.pad_id: int = self.sp_model.pad_id()\n",
-    "        print(f\"vocab_size: {self.vocab_size} - BOS ID: {self.bos_id} - EOS ID: {self.eos_id}\")\n",
+    "        self.pad_id: int = self.sp_model.eos_id()\n",
+    "        token_for_id_0 = self.sp_model.IdToPiece(0)\n",
+    "        print(f\"Token for ID 0: {token_for_id_0}\")\n",
+    "        print(f\"vocab_size: {self.vocab_size} - BOS ID: {self.bos_id} - EOS ID: {self.eos_id} - PAD ID: {self.pad_id}\")\n",
     "    \n",
     "    def encode(self, s: str, bos: bool, eos: bool) -> List[int]:\n",
     "        t = self.sp_model.encode(s)\n",
@@ -158,6 +160,7 @@
     "        encoded_ds[split] = torch.tensor(tokenizer.encode(combined_corpus, bos=False, eos=False)).to(device)\n",
     "    return encoded_ds\n",
     "\n",
+    "# this is incorrect\n",
     "def get_ds(encoded_ds, split, config, device):\n",
     "    ds = encoded_ds[split]\n",
     "    ix = torch.randint(0, ds.size(0) - config['context_window'] - 1, (config['batch_size'],))\n",
@@ -200,11 +203,6 @@
     "    \n",
     "    def forward(self, x: torch.Tensor):\n",
     "        rms_norm = x * torch.rsqrt(x.pow(2).mean(dim=-1, keepdim=True) + self.eps)\n",
-    "        # if not self.training:\n",
-    "        #     print(\"++++++++++++++++++++++++++++++++++++++\")\n",
-    "        #     print(rms_norm.shape)\n",
-    "        #     print(self.weight.shape)\n",
-    "        #     print(\"++++++++++++++++++++++++++++++++++++++\")\n",
     "        return self.weight * rms_norm"
    ]
   },
@@ -223,7 +221,7 @@
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
     "        self.config = config\n",
-    "        self.embedding = nn.Embedding(config['vocab_size'], config['d_model'])\n",
+    "        self.embedding = nn.Embedding(config['vocab_size'], config['d_model'], padding_idx=tokenizer.pad_id)\n",
     "        self.rms = RMSNorm((config['context_window'], config['d_model']))\n",
     "        self.linear = nn.Sequential(\n",
     "            nn.Linear(config['d_model'], config['d_model']),\n",
@@ -234,8 +232,8 @@
     "    \n",
     "    def forward(self, idx, targets=None):\n",
     "        x = self.embedding(idx)\n",
-    "        x = self.rms(x)\n",
-    "        logits = self.linear(x)\n",
+    "        a = self.rms(x)\n",
+    "        logits = self.linear(a)\n",
     "        if targets is not None:\n",
     "            loss = F.cross_entropy(logits.view(-1, self.config['vocab_size']), targets.view(-1)).to(device)\n",
     "            return logits, loss\n",
@@ -310,23 +308,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = \"1\"\n",
+    "\n",
     "# Inference\n",
     "def generate(model, prompt, tokenizer, config, device, max_new_tokens, temperature):\n",
     "    model.eval()\n",
-    "    encoded_prompt = torch.tensor(tokenizer.encode(prompt, bos=True, eos=False)).to(device).unsqueeze(0).to(device)\n",
+    "    encoded_prompt = torch.tensor(tokenizer.encode(prompt, bos=True, eos=False)).unsqueeze(0).to(device)\n",
     "    # pad tokens\n",
-    "    if encoded_prompt.size(1) < config['context_window']:\n",
-    "        encoded_prompt = F.pad(encoded_prompt, (config['context_window'] - encoded_prompt.size(1), 0), value=tokenizer.pad_id).to(device)\n",
-    "    print(f\"encoded prompt shape: {encoded_prompt.shape}\")\n",
+    "    padded_prompt = torch.full((1, config['context_window']), tokenizer.pad_id).to(device)\n",
+    "    padded_prompt[:, :encoded_prompt.size(1)] = encoded_prompt\n",
     "    next_tokens = []\n",
     "    for _ in range(max_new_tokens):\n",
-    "        # x = encoded_prompt[-config['context_window']:].to(device)\n",
-    "        logits = model(encoded_prompt).to(device)\n",
+    "        logits = model(padded_prompt).to(device)\n",
     "        probs = F.softmax(logits[:, -1, :], dim=-1).to(device)\n",
     "        next_token = torch.multinomial(probs / temperature, num_samples=1).to(device)\n",
     "        next_tokens.append(next_token.item())\n",
-    "        encoded_prompt = torch.cat([encoded_prompt[1:], next_token], dim=0).to(device)\n",
-    "        print(\"encoded prompt: \", encoded_prompt)\n",
+    "        padded_prompt = torch.cat((padded_prompt[:, 1:], next_token), dim=-1).to(device)\n",
     "    print(tokenizer.decode(next_tokens))\n",
     "\n",
     "generate(model, \"Once upon \", tokenizer, config, device, 10, 0.7)"
